--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ class="mt-4 py-2 px-4 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">
     </div>
     <script>
 
-const SHEET_API_URL = "https://script.googleusercontent.com/macros/echo?user_content_key=AKfycbz7OrUns2Ym9ISgMzm7gz-G3vrxJmZ15_c-wX-wTCjN9nowSLHlhYA6_l-eSvPlDf9J";
+const SHEET_API_URL = "https://script.google.com/macros/s/AKfycbx4jSQcOL6LLOlyMG7-HfQGln5evJIoPqMl7qzbmughTkN1VkWZL01S55wfT2FLdt3t/exec";
 
        const pages = ["home", "tamu", "adminLogin", "admin"];
 
@@ -484,4 +484,5 @@ document.getElementById("prevPage").addEventListener("click", () => {
 </body>
 
 </html>
+
 
