--- a/index.html
+++ b/index.html
@@ -383,14 +383,12 @@ async function loadGuests() {
     const endDate = document.getElementById("endDate")?.value || "";
     const list = document.getElementById("guestList");
 
-    cconst filtered = guests.filter(e => {
-  const nama = (e.nama || "").toLowerCase();
-  const tanggal = parseTanggalIndonesia(e.waktu || "");
-  const searchText = search.toLowerCase();
+    const filtered = guests.filter(e => {
+  const tanggal = parseTanggalIndonesia(e.waktu);
 
   const cocokSearch =
-    nama.includes(searchText) ||
-    tanggal.includes(searchText);
+    (e.nama || "").toLowerCase().includes(search) ||
+    tanggal.includes(search);
 
   let cocokTanggal = true;
   if (startDate && tanggal < startDate) cocokTanggal = false;
@@ -487,6 +485,7 @@ document.getElementById("prevPage").addEventListener("click", () => {
 </body>
 
 </html>
+
 
 
 
