--- a/index.html
+++ b/index.html
@@ -411,49 +411,61 @@ async function loadGuests() {
 
     console.log("API response:", result);
 
-    // ✅ AMBIL ARRAY YANG BENAR
-    const rawData = result.data || [];
+    // Ambil array data tanpa bergantung pada bentuk response
+    const rawData = Array.isArray(result) ? result : (result && Array.isArray(result.data) ? result.data : []);
+
     if (!Array.isArray(rawData)) {
-      throw new Error("Format data API salah");
+      console.warn("Warning: rawData bukan array, set ke []");
     }
 
-    // ✅ Mapping field Spreadsheet ke field Web
-    const guests = rawData.map(r => ({
-      waktu: r.Timestamp || "",
-      nik: r.NIK || "",
-      nama: r.Nama || "",
-      alamat: r.Alamat || "",
-      telepon: r["No. Telp"] || r.Telepon || "",
-      instansi: r.Instansi || "",
-      bertemu: r["Bertemu Dengan"] || r.Bertemu || "",
-      tujuan: r["Tujuan Kunjungan"] || r.Tujuan || "",
-      rombongan: r["Individu/Rombongan"] || r.Rombongan || "",
-      petugas: r.Petugas || "",
-      foto: r.Foto || ""
-    }));
+    // Mapping yang toleran terhadap nama kolom berbeda
+    const guests = rawData.map(r => {
+      // r bisa berupa object hasil parse header->value (Apps Script doGet)
+      return {
+        // beberapa kemungkinan nama kolom
+        waktu: r.Timestamp || r.waktu || r.Waktu || r["Timestamp"] || "",
+        nik: r.NIK || r.nik || r["NIK/IDCard"] || r["NIK"] || "",
+        nama: r.Nama || r.nama || r["Nama Lengkap"] || "",
+        alamat: r.Alamat || r.alamat || "",
+        telepon: r["No. Telp"] || r.Telepon || r.telepon || "",
+        instansi: r.Instansi || r.instansi || "",
+        bertemu: r["Bertemu Dengan"] || r.Bertemu || r.bertemu || "",
+        tujuan: r["Tujuan Kunjungan"] || r.Tujuan || r.tujuan || "",
+        rombongan: r["Individu/Rombongan"] || r.Rombongan || r.rombongan || "",
+        petugas: r.Petugas || r.petugas || "",
+        foto: r.Foto || r.foto || ""
+      };
+    });
 
-    const search = document.getElementById("searchInput").value.toLowerCase();
-    const startDate = document.getElementById("startDate").value;
-    const endDate = document.getElementById("endDate").value;
+    // ambil filter/input
+    const search = (document.getElementById("searchInput")?.value || "").toLowerCase();
+    const startDate = document.getElementById("startDate")?.value || "";
+    const endDate = document.getElementById("endDate")?.value || "";
     const list = document.getElementById("guestList");
 
+    // filter dan normalisasi tanggal
     const filtered = guests.filter(e => {
       if (!e.waktu) return false;
 
-      const tanggal = new Date(e.waktu).toISOString().slice(0, 10);
+      // coba parse e.waktu ke ISO date (toleran)
+      let tanggal = "";
+      try {
+        tanggal = new Date(e.waktu).toISOString().slice(0, 10);
+      } catch (err) {
+        tanggal = "";
+      }
 
-      const cocokSearch =
-        (e.nama || "").toLowerCase().includes(search) ||
-        tanggal.includes(search);
+      const namaLower = (e.nama || "").toLowerCase();
+      const cocokSearch = namaLower.includes(search) || tanggal.includes(search);
 
       let cocokTanggal = true;
-      if (startDate && tanggal < startDate) cocokTanggal = false;
-      if (endDate && tanggal > endDate) cocokTanggal = false;
+      if (startDate && tanggal && tanggal < startDate) cocokTanggal = false;
+      if (endDate && tanggal && tanggal > endDate) cocokTanggal = false;
 
       return cocokSearch && cocokTanggal;
     });
 
-    const totalPages = Math.ceil(filtered.length / itemsPerPage) || 1;
+    const totalPages = Math.max(1, Math.ceil(filtered.length / itemsPerPage));
     if (currentPage > totalPages) currentPage = totalPages;
 
     const start = (currentPage - 1) * itemsPerPage;
@@ -461,7 +473,7 @@ async function loadGuests() {
 
     list.innerHTML = paginatedData.map(e => `
       <tr class="border-b hover:bg-gray-50 h-14">
-        <td class="p-2">${new Date(e.waktu).toLocaleString()}</td>
+        <td class="p-2">${e.waktu ? new Date(e.waktu).toLocaleString() : "-"}</td>
         <td class="p-2">${e.nik || "-"}</td>
         <td class="p-2">${e.nama || "-"}</td>
         <td class="p-2">${e.alamat || "-"}</td>
@@ -470,9 +482,7 @@ async function loadGuests() {
         <td class="p-2">${e.bertemu || "-"}</td>
         <td class="p-2">${e.tujuan || "-"}</td>
         <td class="p-2">${e.rombongan || "-"}</td>
-        <td class="p-2">
-          ${e.foto ? `<img src="${e.foto}" class="w-20 h-16 object-cover rounded cursor-pointer" onclick="openModalUrl('${e.foto}')"/>` : '-'}
-        </td>
+        <td class="p-2">${e.foto ? `<img src="${e.foto}" class="w-20 h-16 object-cover rounded cursor-pointer" onclick="openModalUrl('${e.foto}')"/>` : '-'}</td>
         <td class="p-2">${e.petugas || "-"}</td>
       </tr>
     `).join("");
@@ -483,7 +493,7 @@ async function loadGuests() {
     updateStatsOnline(filtered);
 
   } catch (err) {
-    console.error(err);
+    console.error("loadGuests error:", err);
     alert("❌ Gagal mengambil data dari Spreadsheet!");
   }
 }
@@ -492,9 +502,8 @@ document.getElementById("nextPage").addEventListener("click", async () => {
   try {
     const res = await fetch(SHEET_API_URL);
     const result = await res.json();
-    const guests = result.data || [];
-
-    const totalPages = Math.ceil(guests.length / itemsPerPage);
+    const rawData = Array.isArray(result) ? result : (result && Array.isArray(result.data) ? result.data : []);
+    const totalPages = Math.ceil(rawData.length / itemsPerPage) || 1;
 
     if (currentPage < totalPages) {
       currentPage++;
