--- a/index.html
+++ b/index.html
@@ -99,13 +99,15 @@
                     <option value="Dayat">Dayat</option>
                     <option value="Firdaus">Firdaus</option>
                 </select>
-  <button type="submit"
-  class="w-full py-3 bg-yellow-400 text-sky-900 font-bold rounded hover:bg-yellow-500">
-  Kirim
-</button>
+  </div>
 
-</form>
-
+                <button type="submit"
+                    class="w-full py-3 bg-sky-700 text-white rounded-lg font-bold hover:bg-sky-800">Kirim</button>
+            </form>
+            <button onclick="showPage('home')"
+                class="mt-4 w-full py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">⬅ Kembali ke Menu
+                Utama</button>
+        </div>
     </section>
 
     <!-- ADMIN LOGIN -->
@@ -486,4 +488,5 @@ document.getElementById("prevPage").addEventListener("click", () => {
 </body>
 
 </html>
+
 
