--- a/index.html
+++ b/index.html
@@ -98,13 +98,18 @@
                     <option value="Idris">Idris</option>
                     <option value="Dayat">Dayat</option>
                     <option value="Firdaus">Firdaus</option>
-                </select>
                 <button type="submit"
-                    class="w-full py-3 bg-sky-700 text-white rounded-lg font-bold hover:bg-sky-800">Kirim</button>
-            </form>
-            <button onclick="showPage('home')"
-                class="mt-4 w-full py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">⬅ Kembali ke Menu
-                Utama</button>
+  class="w-full py-3 bg-yellow-400 text-sky-900 font-bold rounded hover:bg-yellow-500">
+  Kirim
+</button>
+
+<button type="button"
+  onclick="showPage('home')"
+  class="w-full py-3 mt-3 bg-gray-300 text-gray-700 font-bold rounded hover:bg-gray-400">
+  ⬅ Kembali ke Menu Utama
+</button>
+
+</form>
     </section>
 
     <!-- ADMIN LOGIN -->
@@ -485,6 +490,7 @@ document.getElementById("prevPage").addEventListener("click", () => {
 </body>
 
 </html>
+
 
 
 
