--- a/index.html
+++ b/index.html
@@ -78,27 +78,29 @@
                     <option value="Rombongan">Rombongan</option>
                 </select>
                 <select id="petugas" class="w-full p-3 border rounded" required>
-                    <option disabled selected value="">Petugas</option>
-                    <option value="Wahono">Wahono</option>
-                    <option value="Rizky">Rizky</option>
-                    <option value="Fatony">Fatony</option>
-                    <option value="Teguh">Teguh</option>
-                    <option value="Sony">Sony</option>
-                    <option value="Darmawansyah">Darmawansyah</option>
-                    <option value="Putu">Putu</option>
-                    <option value="Ontong">Ontong</option>
-                    <option value="M.Kurniawan">M.Kurniawan</option>
-                    <option value="Suyatni">Suyatni</option>
-                    <option value="Badri">Badri</option>
-                    <option value="Sigit">Sigit</option>
-                    <option value="Andri">Andri</option>
-                    <option value="SriAyuni">Sri Ayuni</option>
-                    <option value="Isti">Isti</option>
-                    <option value="Junaidi">Junaidi</option>
-                    <option value="Idris">Idris</option>
-                    <option value="Dayat">Dayat</option>
-                    <option value="Firdaus">Firdaus</option>
-                <button type="submit"
+    <option disabled selected value="">Petugas</option>
+    <option value="Wahono">Wahono</option>
+    <option value="Rizky">Rizky</option>
+    <option value="Fatony">Fatony</option>
+    <option value="Teguh">Teguh</option>
+    <option value="Sony">Sony</option>
+    <option value="Darmawansyah">Darmawansyah</option>
+    <option value="Putu">Putu</option>
+    <option value="Ontong">Ontong</option>
+    <option value="M.Kurniawan">M.Kurniawan</option>
+    <option value="Suyatni">Suyatni</option>
+    <option value="Badri">Badri</option>
+    <option value="Sigit">Sigit</option>
+    <option value="Andri">Andri</option>
+    <option value="SriAyuni">Sri Ayuni</option>
+    <option value="Isti">Isti</option>
+    <option value="Junaidi">Junaidi</option>
+    <option value="Idris">Idris</option>
+    <option value="Dayat">Dayat</option>
+    <option value="Firdaus">Firdaus</option>
+</select>  <!-- ⬅️ INI YANG HILANG -->
+
+<button type="submit"
   class="w-full py-3 bg-yellow-400 text-sky-900 font-bold rounded hover:bg-yellow-500">
   Kirim
 </button>
@@ -114,7 +116,7 @@
 
     <!-- ADMIN LOGIN -->
     <section id="adminLogin"
-        class="min-h-screen flex flex-col justify-center items-center relative text-white text-center bg-cover bg-center"
+        class="hidden min-h-screen flex flex-col justify-center items-center relative text-white text-center bg-cover bg-center"
         style="background-image: url('imigrasi.jpg');">
         <div class="absolute inset-0 bg-white/70"></div>
         <div class="relative bg-white/30 backdrop-blur-md text-black shadow-lg rounded-xl p-8 w-full max-w-2xl z-10">
@@ -490,6 +492,7 @@ document.getElementById("prevPage").addEventListener("click", () => {
 </body>
 
 </html>
+
 
 
 
